@@ -421,6 +421,29 @@ If it's true, controller will auto-detect its groupmembers with multicast.
       </config>
   </category>
 
+  <category name="samsungtv">
+      <description>
+          <![CDATA[
+            Configuration for the Samsung TV protocol
+          ]]>
+      </description>
+      
+      <config name="protocol.samsungTV.classname" value="org.openremote.controller.protocol.samsungtv.SamsungTVRemoteCommandBuilder"> 
+        <hint> 
+          <![CDATA[ 
+           Samsung TV CommandBuilder class. This entry should not be changed. 
+          ]]> 
+        </hint> 
+      </config> 
+      <config name="samsungTV.address" value="">
+          <hint>
+              <![CDATA[
+                Address of the samsung TV to use.
+              ]]>
+          </hint>
+      </config>
+  </category>
+
   <!--
    |
    |  TODO : TEMPORARY
